--- a/pack.toml
+++ b/pack.toml
@@ -1,5 +1,5 @@
-name = "All the Mods 10 - ATM10"
-author = "ATMTeam"
+name = "Spirit Biomes' ATM10"
+author = "Vee + ATMTeam"
 version = "4.14"
 pack-format = "packwiz:1.1.0"
 
