--- a/mods/c2me-neoforge.pw.toml
+++ b/mods/c2me-neoforge.pw.toml
@@ -1,6 +1,6 @@
 name = "Concurrent Chunk Management Engine (NeoForge)"
 filename = "c2me-neoforge-mc1.21.1-0.3.0+alpha.0.82.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/COlSi5iR/versions/GByJWxFj/c2me-neoforge-mc1.21.1-0.3.0%2Balpha.0.82.jar"
